--- a/src/app/modules/home/home-content/home-content.component.html
+++ b/src/app/modules/home/home-content/home-content.component.html
@@ -29,4 +29,6 @@
     <img id="about-image" src="../../../../assets/main/about.png" alt="Bootstrap" width="100%" height="100%">
 
     <div id="about-content">Online learning with us does not interfere with your daily life. because learning can be done anytime and anywhere.</div>
+
+    <div>This is test</div>
 </div>
