--- a/src/app/modules/home/nav-bar/nav-bar.component.html
+++ b/src/app/modules/home/nav-bar/nav-bar.component.html
@@ -20,6 +20,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact Us</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/admin-pannel">Admin Panel</a>
+              </li>
             </ul>
           </div>
     </div>
