--- a/src/app/modules/home/home-content/home-content.component.css
+++ b/src/app/modules/home/home-content/home-content.component.css
@@ -119,7 +119,6 @@
     float: left;
     width: 61.31%;
     height: 525px;
-    
 }
 
 #about-content {
@@ -167,9 +166,9 @@
 
 
 #service-container{
-    display: inline-block;
-    margin-top: 120px;
+    padding-top: 120px;
     margin-bottom: 500px;
+    clear: both;
 }
 
 #service-title{
@@ -230,7 +229,7 @@
     width: 1076px;
     height: 525px;
     position: absolute;
-    top: 304px;
+    top: 348px;
     right: 120px;
     z-index: -1;
 }
