--- a/src/app/modules/admin-panel/manage-service/manage-service.component.css
+++ b/src/app/modules/admin-panel/manage-service/manage-service.component.css
@@ -1,10 +1,25 @@
 .table {
     width: 80%;
-    margin-top: 40px;
+    margin-top: 70px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .deleteIcon {
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.editIcon {
+    cursor: pointer;
+}
+
+.add-button {
+    float: right;
+    margin-right: 10%;
+    margin-top: 20px;
+}
+
+.content-input {
+    height: 150px;
 }
