--- a/src/app/modules/home/home-content/home-content.component.html
+++ b/src/app/modules/home/home-content/home-content.component.html
@@ -1,6 +1,7 @@
 <div id="main-title-container">
     <div id="main-title">Design your<br />
         interor with high<br /> quality.</div>
+    <button (click)="navigateLogin()" class="btn btn-dark login">Login</button>
     <div id="horizontal-line-container">
         <hr size="9" id="horizontal-line">
     </div>
@@ -16,7 +17,7 @@
     <img id="main-image" src="../../../../assets/main/main.png" alt="Bootstrap" width="100%" height="100%">
 </div>
 
-<div id="about-container" data-aos="fade-right" data-aos-offset="400" data-aos-duration="2000" data-aos-delay="200">
+<div id="about-container" data-aos="fade-right" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="200">
     <div id="mini-title-container">
         <div id="mini-title">ABOUT</div>
         <hr id="mini-title-hr">
@@ -41,7 +42,7 @@
     </div>
 </div>
 
-<div id="service-container" data-aos="fade-right" data-aos-offset="400" data-aos-duration="2000" data-aos-delay="200">
+<div id="service-container" data-aos="fade-right" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="200">
     <div id="mini-title-container">
         <div id="mini-title">SERVICES</div>
         <hr id="mini-title-hr">
