--- a/src/app/modules/home/nav-bar/nav-bar.component.html
+++ b/src/app/modules/home/nav-bar/nav-bar.component.html
@@ -1,29 +1,29 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/home-content">
-            <img src="../../../../assets/nav-bar/Logo.png" alt="Bootstrap" width="126" height="54">
-        </a>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav nav-content">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" routerLinkActive="active" routerLink="/home-content">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/about-us">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Teams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/admin-pannel">Admin Panel</a>
-              </li>
-            </ul>
-          </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/home-content">
+      <img src="../../../../assets/nav-bar/Logo.png" alt="Bootstrap" width="126" height="54">
+    </a>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav nav-content">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLinkActive="active" routerLink="/home-content">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about-us">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Our Teams</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/admin-pannel">Admin Panel</a>
+        </li>
+        <li class="nav-item">
+          <button (click)="logOut()" *ngIf="isLoggedIn()" type="button" class="btn btn-dark log-out">Log Out</button>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
